[package]
name = "wl-lock"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
wayland-backend = { version = "0.3.15", features = ["client_system"] }

rustix = { version = "1.1.4", features = ["shm"] }
libc = "0.2.186"
xkbcommon = { version = "0.9.0", features = ["wayland"] }

pam = "0.8.0"
#pam-sys = "0.5.6"

egui = "0.34.3"
egui-wgpu = "0.34.3"
raw-window-handle = "0.6.2"
wgpu = "29.0.3"

derive_more = { version = "2.1.1", features = ["full"] }

pollster = "0.4.0"

image = { version = "0.25", features = ["jpeg", "png"] }
egui_extras = { version = "0.34.3", features = ["image"] }
egui_alignments = "0.3.8"

chrono = "0.4.45"